--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,12 @@ jsonschema==2.6.0
 jupyter-core==4.4.0
 MarkupSafe==1.1.0
 nbformat==4.4.0
+numpy==1.15.4
 plotly==3.4.1
 pytz==2018.7
 requests==2.20.1
 retrying==1.3.3
+scipy==1.1.0
 six==1.11.0
 traitlets==4.3.2
 urllib3==1.24.1
